tests/baselines/reference/emitArrowFunctionWhenUsingArguments14.errors.txt
emitArrowFunctionWhenUsingArguments14.ts(3,15): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments14.ts(4,22): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments14.ts (2 errors) ====
    function f() {
        if (Math.random()) {
            const arguments = 100;
                  ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            return () => arguments;
                         ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
        }
    }